--- a/src/public/blockinsurance/Hospital.html
+++ b/src/public/blockinsurance/Hospital.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="Form2.css" />
-    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="public/blockchain/css/Form2.css" />
+    <script type="text/javascript" src="public/blockchain/js/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
