--- a/src/public/blockinsurance/userView.html
+++ b/src/public/blockinsurance/userView.html
@@ -203,7 +203,7 @@
 
 			</table>
 			<input name="secret" type="hidden" value="1b3a9374-1a8e-434e-90ab-21aa7b9b80e7" />
-			<button class="contact-form__button" id="submit" type="submit">Submit</button>
+			<button class="contact-form__button" id="submit" onclick="claim()" type="submit">Submit</button>
 
 		</form>
 	</section>
@@ -222,32 +222,7 @@
 	  <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 	  <script src="public/blockinsurance/js/controllers/ipfsController.js" type="text/javascript" ></script>
 <script>
-	$("#submit").click(function(){
-		event.preventDefault();
-		var buttonValue = {};
-		$("input").each(function($i){
-			var name =$(this).attr('name')
-			if ($(this).val())
-			{
-				buttonValue[name]=$(this).val();
-				}
-			var e = document.getElementById("acc_country");
-			var strCountry = e.options[e.selectedIndex].value;
-			buttonValue['acc_country']= strCountry
-		});
 
-
-		$.post("/saveClaim", {claimObject : buttonValue}, function(result){
-        console.log("hash ====> " + result)
-    });
-
-		// var fs = require('fs');
-		// fs.writeFile("thing.json", JSON.stringify(buttonValue));
-
-	});
-	function saveClaim(){
-		console.log("Reached HEre ")
-	}
 </script>
 
 </body>
