UI files updated , added landing page

--- a/src/public/blockinsurance/Police.html
+++ b/src/public/blockinsurance/Police.html
@@ -40,14 +40,15 @@
                 <tr>
                     <td><label for="police_country">Country</label></td>
                     <td><select name="police_country" id="police_country">
-                                <option value="">--Select your country--</option>
-                                <option value="BE">Belgium</option>
-                                <option value="HR">Croatia</option>
-                                <option value="CZ">Czech Republic</option>
-                                <option value="EG">Egypt</option>
-                                <option value="FR">France</option>
-                                <option value="DE">Germany</option>
-                                </select></td>
+                        <option value="">--Select country--</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="Croatia">Croatia</option>
+                        <option value="Czech Republic">Czech Republic</option>
+                        <option value="Egypt">Egypt</option>
+                        <option value="France">France</option>
+                        <option value="Germany">Germany</option>
+                        </select></td>
+                    </td>
                 </tr>
                 <!--Accident details section-->
                 <tr>
