--- a/src/public/blockinsurance/SecondParty.html
+++ b/src/public/blockinsurance/SecondParty.html
@@ -93,6 +93,7 @@
 </body>
 <script>
     $(function() {
+        //Retrieve hash
         var your_url = 'https://ipfs.io/ipfs/QmVD1pqc6uDKCagmXVi5UWinz14hLKKSmwKYamNGMi6mW7';
         var jsonobj;
         $.ajax({
