--- a/src/public/blockinsurance/Hospital.html
+++ b/src/public/blockinsurance/Hospital.html
@@ -40,13 +40,13 @@
                 <tr>
                     <td><label for="hospital_country">Country</label></td>
                     <td><select name="hospital_country" id="hospital_country">
-                                <option value="">--Select your country--</option>
-                                <option value="BE">Belgium</option>
-                                <option value="HR">Croatia</option>
-                                <option value="CZ">Czech Republic</option>
-                                <option value="EG">Egypt</option>
-                                <option value="FR">France</option>
-                                <option value="DE">Germany</option>
+                        <option value="">--Select country--</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="Croatia">Croatia</option>
+                        <option value="Czech Republic">Czech Republic</option>
+                        <option value="Egypt">Egypt</option>
+                        <option value="France">France</option>
+                        <option value="Germany">Germany</option>
                                 </select></td>
                 </tr>
 
