New UI files and IPFS changes

--- a/src/public/blockinsurance/tables.html
+++ b/src/public/blockinsurance/tables.html
@@ -493,9 +493,9 @@
                                                     <td class=" ">June 23, 2018 11:47:56 PM </td>
 
                                                     <td class=" ">John Blank L</td>
-                                                    <td class=" ">Pendig</td>
+                                                    <td class=" ">Pending</td>
                                                     <td class="a-right a-right ">$7.45</td>
-                                                    <td class=" last"><a href="#">View</a>
+                                                    <td class=" last"><a href="Police.html">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="odd pointer">
@@ -508,7 +508,7 @@
                                                     <td class=" ">John Blank L</td>
                                                     <td class=" ">Pending</td>
                                                     <td class="a-right a-right ">$741.20</td>
-                                                    <td class=" last"><a href="#">View</a>
+                                                    <td class=" last"><a href="Police.html">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="even pointer">
@@ -521,7 +521,7 @@
                                                     <td class=" ">Mike Smith</td>
                                                     <td class=" ">Pending</td>
                                                     <td class="a-right a-right ">$432.26</td>
-                                                    <td class=" last"><a href="#">View</a>
+                                                    <td class=" last"><a href="Police.html">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="odd pointer">
