--- a/src/public/blockinsurance/Hospital_index.html
+++ b/src/public/blockinsurance/Hospital_index.html
@@ -45,11 +45,11 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                            <img src="images/po.jpg" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
-                            <h2>Jeshwant Pilla</h2>
+                            <h2>Medical officer</h2>
                         </div>
                     </div>
                     <!-- /menu profile quick info -->
@@ -61,9 +61,9 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a href="index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="form.html"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="tables.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="hospital_index.html"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="form.html"><i class="fa fa-edit"></i> Pending Claims </a></li>
+                                <li><a href="tables.html"><i class="fa fa-desktop"></i> Claim History</a></li>
                                 <li><a href="project_detail.html"><i class="fa fa-table"></i> Notifications</span></a></li>
                                 <!-- <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
@@ -158,7 +158,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/img.jpg" alt="">Jeshwant Pilla
+                                    <img src="images/po.jpg" alt="">Medical officer
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
