--- a/src/public/blockinsurance/PolicyHolder.html
+++ b/src/public/blockinsurance/PolicyHolder.html
@@ -7,6 +7,7 @@
     <title>Policy Holder page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/Form2.css" /> -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
@@ -246,8 +247,8 @@
     <script src="public/blockinsurance/js/myApp.js" type="text/javascript"></script>
     <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 </body>
-<script>
-    function claim() = {
+<!-- <script>
+    function claim() {
       e.preventDefault();
 
         var jsondata = {};
@@ -280,6 +281,6 @@
             });
 
     };
-</script>
+</script> -->
 
 </html>
