--- a/src/public/blockinsurance/Police.html
+++ b/src/public/blockinsurance/Police.html
@@ -18,7 +18,7 @@
         <p>Please fill up the following form:-</p>
         <form id="Police_form">
             <table class="table_form">
-                <!--Policy branch details section-->
+                <!--Start - Police station details-->
                 <tr>
                     <td colspan="2">
                         <strong>Police station details</strong>
