--- a/src/public/blockinsurance/PolicyHolderForm.html
+++ b/src/public/blockinsurance/PolicyHolderForm.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>Claim Assist</title>
 
     <!-- Bootstrap -->
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -64,10 +64,10 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a href="index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="form.html"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="tables.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
-                                <li><a href="project_detail.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="PolicyHolder_index.html"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="PolicyHolderForm.html"><i class="fa fa-edit"></i> Create Claim </a></li>
+                                <li><a href="PolicyHolder_claimstatus.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="PolicyHolder_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
 
                             </ul>
                         </div>
@@ -121,70 +121,7 @@
                                 </ul>
                             </li>
 
-                            <li role="presentation" class="dropdown">
-                                <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa fa-envelope-o"></i>
-                                    <span class="badge bg-green">6</span>
-                                </a>
-                                <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <div class="text-center">
-                                            <a>
-                                                <strong>See All Alerts</strong>
-                                                <i class="fa fa-angle-right"></i>
-                                            </a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </li>
+
                         </ul>
                     </nav>
                 </div>
@@ -377,6 +314,12 @@
                                                 <input type="text" id="accident_place" name="Accident place" class="form-control col-md-7 col-xs-12">
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Accident_datetime">Date-Time<span class="required">*</span></label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input type="datetime-local" id="Accident_datetime" name="Accident date-time" class="date-picker form-control col-md-7 col-xs-12">
+                                            </div>
+                                        </div>
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Country<span class="required ">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12 ">
@@ -393,21 +336,21 @@
                                         </div>
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Reporting authority involved<span class="required ">*</span></label>
-                                            <div class="col-md-6 col-sm-6 col-xs-12 ">
+                                            <div class="col-md-6 col-sm-6 col-xs-12 " style="padding-top: 7px;">
                                                 <input type="radio" name="Reporting authority" value="yes"> Yes &nbsp;
                                                 <input type="radio" name="Reporting authority" value="no"> No
                                             </div>
                                         </div>
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Injury<span class="required ">*</span></label>
-                                            <div class="col-md-6 col-sm-6 col-xs-12 ">
+                                            <div class="col-md-6 col-sm-6 col-xs-12 " style="padding-top: 7px;">
                                                 <input type="radio" name="Injury" value="yes"> Yes &nbsp;
                                                 <input type="radio" name="Injury" value="no"> No
                                             </div>
                                         </div>
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Material damage<span class="required ">*</span></label>
-                                            <div class="col-md-6 col-sm-6 col-xs-12 ">
+                                            <div class="col-md-6 col-sm-6 col-xs-12 " style="padding-top: 7px;">
                                                 <input type="radio" name="Material damage" value="yes"> Yes &nbsp;
                                                 <input type="radio" name="Material damage" value="no"> No
                                             </div>
@@ -415,13 +358,14 @@
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Claim_form">Upload Claim form</label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="file" id="claim_form" name="Claim form" class="form-control col-md-7 col-xs-12">
+                                                <input type="file" id="claim_form" name="Claim form" class="form-control col-md-7 col-xs-12" style="border: none;">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Accident photos">Upload Accident photos</label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="file" id="Accident_photos" name="Accident photos" class="form-control col-md-7 col-xs-12">
+                                                <input type="file" id="Accident_photos" name="Accident photos" class="form-control col-md-7 col-xs-12" style="border: none;">
+
                                             </div>
                                         </div>
 
@@ -542,10 +486,11 @@
 
 
                                         <div class="form-group ">
-                                            <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Telephone</label>
-                                            <div class="col-md-6 col-sm-6 col-xs-12 ">
-                                                <input id="witness_telephone" name="Witness telephone" class="form-control col-md-7 col-xs-12 " type="tel" maxlength="10" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-                                                <span class="fa fa-phone form-control-feedback right " aria-hidden="true "></span></div>
+                                            <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Responsible party according to you<span class="required ">*</span></label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12 " style="padding-top: 7px;">
+                                                <input type="radio" name="Responsible party" value="Myself"> Myself &nbsp;
+                                                <input type="radio" name="Responsible party" value="Other party"> Other party
+                                            </div>
                                         </div>
 
 
@@ -563,6 +508,7 @@
                                 <button type="submit" class="btn btn-success " id="submit">Submit</button>
                             </div>
                         </div>
+
 
                     </form>
 
