--- a/src/public/blockinsurance/PolicyHolder_index.html
+++ b/src/public/blockinsurance/PolicyHolder_index.html
@@ -37,7 +37,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -59,12 +59,12 @@
                     <!-- sidebar menu -->
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
-                            <h3>General</h3>
+
                             <ul class="nav side-menu">
-                                <li><a href="index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="form.html"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="tables.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
-                                <li><a href="project_detail.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="PolicyHolder_index.html"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="PolicyHolderForm.html"><i class="fa fa-edit"></i> Create Claim </a></li>
+                                <li><a href="PolicyHolder_claimstatus.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="PolicyHolder_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
                                 <!-- <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="chartjs.html">Chart JS</a></li>
