[Client-Server]: Interfrated UI

--- a/src/public/blockinsurance/Police_index.html
+++ b/src/public/blockinsurance/Police_index.html
@@ -12,23 +12,23 @@
     <title>Claim Assist</title>
 
     <!-- Bootstrap -->
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
-    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
     <!-- bootstrap-progressbar -->
-    <link href="vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
     <!-- JQVMap -->
-    <link href="vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet" />
+    <link href="/public/blockinsurance/vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet" />
     <!-- bootstrap-daterangepicker -->
-    <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="css/custom.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/css/custom.min.css" rel="stylesheet">
 </head>
 
 <body class="nav-md">
@@ -37,7 +37,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="Police_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="Police_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -45,7 +45,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="images/po.jpg" alt="..." class="img-circle profile_img">
+                            <img src="/public/blockinsurance/images/po.jpg" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -60,10 +60,10 @@
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
                             <ul class="nav side-menu">
-                                <li><a href="Police_index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="Police_PendingClaims.html"><i class="fa fa-edit"></i> Pending Claims </a></li>
-                                <li><a href="Police_ClaimHistory.html"><i class="fa fa-desktop"></i> Claim History</a></li>
-                                <li><a href="Police_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="/police"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="/policePendingClaims"><i class="fa fa-edit"></i> Pending Claims </a></li>
+                                <li><a href="/policeClaimHistory"><i class="fa fa-desktop"></i> Claim History</a></li>
+                                <li><a href="/policeNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
 
                             </ul>
                         </div>
@@ -101,7 +101,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/po.jpg" alt="">Police officer
+                                    <img src="/public/blockinsurance/images/po.jpg" alt="">Police officer
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -830,45 +830,45 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="vendors/fastclick/lib/fastclick.js"></script>
+    <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="vendors/nprogress/nprogress.js"></script>
+    <script src="/public/blockinsurance/vendors/nprogress/nprogress.js"></script>
     <!-- Chart.js -->
-    <script src="vendors/Chart.js/dist/Chart.min.js"></script>
+    <script src="/public/blockinsurance/vendors/Chart.js/dist/Chart.min.js"></script>
     <!-- gauge.js -->
-    <script src="vendors/gauge.js/dist/gauge.min.js"></script>
+    <script src="/public/blockinsurance/vendors/gauge.js/dist/gauge.min.js"></script>
     <!-- bootstrap-progressbar -->
-    <script src="vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+    <script src="/public/blockinsurance/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- iCheck -->
-    <script src="vendors/iCheck/icheck.min.js"></script>
+    <script src="/public/blockinsurance/vendors/iCheck/icheck.min.js"></script>
     <!-- Skycons -->
-    <script src="vendors/skycons/skycons.js"></script>
+    <script src="/public/blockinsurance/vendors/skycons/skycons.js"></script>
     <!-- Flot -->
-    <script src="vendors/Flot/jquery.flot.js"></script>
-    <script src="vendors/Flot/jquery.flot.pie.js"></script>
-    <script src="vendors/Flot/jquery.flot.time.js"></script>
-    <script src="vendors/Flot/jquery.flot.stack.js"></script>
-    <script src="vendors/Flot/jquery.flot.resize.js"></script>
+    <script src="/public/blockinsurance/vendors/Flot/jquery.flot.js"></script>
+    <script src="/public/blockinsurance/vendors/Flot/jquery.flot.pie.js"></script>
+    <script src="/public/blockinsurance/vendors/Flot/jquery.flot.time.js"></script>
+    <script src="/public/blockinsurance/vendors/Flot/jquery.flot.stack.js"></script>
+    <script src="/public/blockinsurance/vendors/Flot/jquery.flot.resize.js"></script>
     <!-- Flot plugins -->
-    <script src="vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-    <script src="vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-    <script src="vendors/flot.curvedlines/curvedLines.js"></script>
+    <script src="/public/blockinsurance/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
+    <script src="/public/blockinsurance/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
+    <script src="/public/blockinsurance/vendors/flot.curvedlines/curvedLines.js"></script>
     <!-- DateJS -->
-    <script src="vendors/DateJS/build/date.js"></script>
+    <script src="/public/blockinsurance/vendors/DateJS/build/date.js"></script>
     <!-- JQVMap -->
-    <script src="vendors/jqvmap/dist/jquery.vmap.js"></script>
-    <script src="vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-    <script src="vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
+    <script src="/public/blockinsurance/vendors/jqvmap/dist/jquery.vmap.js"></script>
+    <script src="/public/blockinsurance/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
+    <script src="/public/blockinsurance/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
     <!-- bootstrap-daterangepicker -->
-    <script src="vendors/moment/min/moment.min.js"></script>
-    <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="/public/blockinsurance/vendors/moment/min/moment.min.js"></script>
+    <script src="/public/blockinsurance/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="js/custom.min.js"></script>
+    <script src="/public/blockinsurance/js/custom.min.js"></script>
 
 </body>
 
