--- a/src/public/blockinsurance/PolicyHolderForm.html
+++ b/src/public/blockinsurance/PolicyHolderForm.html
@@ -41,7 +41,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -65,10 +65,10 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a href="PolicyHolder_index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="PolicyHolderForm.html"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="PolicyHolder_claimstatus.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
-                                <li><a href="PolicyHolder_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="/policyHolder"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="/policyHolderForm"><i class="fa fa-edit"></i> Create Claim </a></li>
+                                <li><a href="/policyHolderClaimStatus"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="/policyHolderNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
 
                             </ul>
                         </div>
