--- a/src/public/blockinsurance/Police_notifications.html
+++ b/src/public/blockinsurance/Police_notifications.html
@@ -11,16 +11,16 @@
     <title>Gentelella Alela! | </title>
 
     <!-- Bootstrap -->
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
-    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="css/custom.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/css/custom.min.css" rel="stylesheet">
 </head>
 
 <body class="nav-md">
@@ -29,7 +29,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="Police_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="Police_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -37,7 +37,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="images/po.jpg" alt="..." class="img-circle profile_img">
+                            <img src="/public/blockinsurance/images/po.jpg" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -52,10 +52,10 @@
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
                             <ul class="nav side-menu">
-                                <li><a href="Police_index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="Police_PendingClaims.html"><i class="fa fa-edit"></i> Pending Claims </a></li>
-                                <li><a href="Police_ClaimHistory.html"><i class="fa fa-desktop"></i> Claim History</a></li>
-                                <li><a href="Police_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="/police"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="/policePendingClaims"><i class="fa fa-edit"></i> Pending Claims </a></li>
+                                <li><a href="/policeClaimHistory"><i class="fa fa-desktop"></i> Claim History</a></li>
+                                <li><a href="/policeNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
                             </ul>
                         </div>
 
@@ -92,7 +92,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/po.jpg" alt="">Police officer
+                                    <img src="/public/blockinsurance/images/po.jpg" alt="">Police officer
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -189,7 +189,7 @@
                                             <!-- end of user messages -->
                                             <ul class="messages">
                                                 <li>
-                                                    <img src="images/po.jpg" class="avatar" alt="Avatar">
+                                                    <img src="/public/blockinsurance/images/po.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-info">24</h3>
                                                         <p class="month">May</p>
@@ -205,7 +205,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <img src="images/po.jpg" class="avatar" alt="Avatar">
+                                                    <img src="/public/blockinsurance/images/po.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-error">21</h3>
                                                         <p class="month">May</p>
@@ -221,7 +221,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <img src="images/po.jpg" class="avatar" alt="Avatar">
+                                                    <img src="/public/blockinsurance/images/po.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-info">24</h3>
                                                         <p class="month">May</p>
@@ -315,15 +315,15 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="vendors/fastclick/lib/fastclick.js"></script>
+    <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="vendors/nprogress/nprogress.js"></script>
+    <script src="/public/blockinsurance/vendors/nprogress/nprogress.js"></script>
     <!-- ECharts -->
-    <script src="vendors/echarts/dist/echarts.min.js"></script>
+    <script src="/public/blockinsurance/vendors/echarts/dist/echarts.min.js"></script>
 
     <!-- Custom Theme Scripts -->
     <script src="js/custom.min.js"></script>
