--- a/src/public/blockinsurance/PolicyHolder_claimstatus.html
+++ b/src/public/blockinsurance/PolicyHolder_claimstatus.html
@@ -8,19 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>Claim Assist | </title>
 
     <!-- Bootstrap -->
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
-    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="css/custom.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/css/custom.min.css" rel="stylesheet">
 </head>
 
 <body class="nav-md">
@@ -29,7 +29,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="/policyHolderIndex" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -37,7 +37,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                            <img src="/public/blockinsurance/images/img.jpg" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -53,10 +53,10 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a href="PolicyHolder_index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="PolicyHolderForm.html"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="PolicyHolder_claimstatus.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
-                                <li><a href="PolicyHolder_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="/policyHolder"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="/policyHolderForm"><i class="fa fa-edit"></i> Create Claim </a></li>
+                                <li><a href="/policyHolderClaimStatus"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="/policyHolderNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
 
                             </ul>
                         </div>
@@ -95,7 +95,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/img.jpg" alt="">Jeshwant Pilla
+                                    <img src="/public/blockinsurance/images/img.jpg" alt="">Jeshwant Pilla
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -107,7 +107,7 @@
                                         </a>
                                     </li>
                                     <li><a href="javascript:;">Help</a></li>
-                                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                                    <li><a href="/"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                                 </ul>
                             </li>
 
@@ -300,7 +300,7 @@
             <!-- footer content -->
             <footer>
                 <div class="pull-right">
-                    Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                    
                 </div>
                 <div class="clearfix"></div>
             </footer>
@@ -309,18 +309,18 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="vendors/fastclick/lib/fastclick.js"></script>
+    <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="vendors/nprogress/nprogress.js"></script>
+    <script src="/public/blockinsurance/vendors/nprogress/nprogress.js"></script>
     <!-- iCheck -->
-    <script src="vendors/iCheck/icheck.min.js"></script>
+    <script src="/public/blockinsurance/vendors/iCheck/icheck.min.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="js/custom.min.js"></script>
+    <script src="policyHolderClaimStatus/js/custom.min.js"></script>
 </body>
 
 </html>
