--- a/src/public/blockinsurance/project_detail.html
+++ b/src/public/blockinsurance/project_detail.html
@@ -11,16 +11,16 @@
     <title>Gentelella Alela! | </title>
 
     <!-- Bootstrap -->
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
-    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="css/custom.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/css/custom.min.css" rel="stylesheet">
 </head>
 
 <body class="nav-md">
@@ -29,7 +29,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance//ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -37,7 +37,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                            <img src="/public/blockinsurance/images/img.jpg" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -93,7 +93,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/img.jpg" alt="">Jeshwant Pilla
+                                    <img src="/public/blockinsurance/images/img.jpg" alt="">Jeshwant Pilla
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -117,7 +117,7 @@
                                 <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                                     <li>
                                         <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                                            <span class="image"><img src="/public/blockinsurance//img.jpg" alt="Profile Image" /></span>
                                             <span>
                           <span>John Smith</span>
                                             <span class="time">3 mins ago</span>
@@ -129,7 +129,7 @@
                                     </li>
                                     <li>
                                         <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                                            <span class="image"><img src="/public/blockinsurance/images/img.jpg" alt="Profile Image" /></span>
                                             <span>
                           <span>John Smith</span>
                                             <span class="time">3 mins ago</span>
@@ -141,7 +141,7 @@
                                     </li>
                                     <li>
                                         <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                                            <span class="image"><img src="/public/blockinsurance/images/img.jpg" alt="Profile Image" /></span>
                                             <span>
                           <span>John Smith</span>
                                             <span class="time">3 mins ago</span>
@@ -153,7 +153,7 @@
                                     </li>
                                     <li>
                                         <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                                            <span class="image"><img src="/public/blockinsurance/images/img.jpg" alt="Profile Image" /></span>
                                             <span>
                           <span>John Smith</span>
                                             <span class="time">3 mins ago</span>
@@ -253,7 +253,7 @@
                                             <!-- end of user messages -->
                                             <ul class="messages">
                                                 <li>
-                                                    <img src="images/img.jpg" class="avatar" alt="Avatar">
+                                                    <img src="/public/blockinsurance/images/img.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-info">24</h3>
                                                         <p class="month">May</p>
@@ -269,7 +269,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <img src="images/img.jpg" class="avatar" alt="Avatar">
+                                                    <img src="/public/blockinsurance/images/img.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-error">21</h3>
                                                         <p class="month">May</p>
@@ -285,7 +285,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <img src="images/img.jpg" class="avatar" alt="Avatar">
+                                                    <img src="/public/blockinsurance/images/img.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-info">24</h3>
                                                         <p class="month">May</p>
@@ -379,15 +379,15 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="vendors/fastclick/lib/fastclick.js"></script>
+    <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="vendors/nprogress/nprogress.js"></script>
+    <script src="/public/blockinsurance/vendors/nprogress/nprogress.js"></script>
     <!-- ECharts -->
-    <script src="vendors/echarts/dist/echarts.min.js"></script>
+    <script src="/public/blockinsurance/vendors/echarts/dist/echarts.min.js"></script>
 
     <!-- Custom Theme Scripts -->
     <script src="js/custom.min.js"></script>
